--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ aside {
     background-color: #ECF4F9;
     padding: 1rem;
     width: 3rem;
-    transition: width 1.5s ease;
+    transition: width 1s ease;
     overflow: hidden;
 }
 
@@ -131,6 +131,7 @@ main>section {
     padding: 1.25rem;
     border-radius: 0.25rem;
     background-color: #ECF4F9;
+    position: relative;
 }
 
 
@@ -138,27 +139,19 @@ main>section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
 }
 
 .project>div:first-child>p {
     font-style: italic;
 }
 
-.project>div:last-child {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 0.5rem;
-}
-
-.project>div:last-child>div {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-}
-
 .project svg {
     width: 1.25rem;
+    position: absolute;
+    left: 90%;
+    bottom: 65%;
+    cursor: pointer;
 }
 
 dialog {
